# arcade-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  clio-toolkit-feature.md  cspell.config.yaml  pyproject.toml  worker.toml
arcade/: Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  run_cli.py  tox.ini
arcade/arcade/: __init__.py
arcade/arcade/actor/: base.py  main.py  schema.py  utils.py
arcade/arcade/apm/: base.py  pack.py  parse.py
arcade/arcade/cli/: authn.py  constants.py  deployment.py  display.py  launcher.py  main.py  new.py  serve.py  show.py  utils.py  worker.py
arcade/arcade/client/: __init__.py  base.py  client.py  errors.py  schema.py
arcade/arcade/core/: auth.py  catalog.py  client.py  config.py  config_model.py  env.py  errors.py  executor.py  output.py  parse.py  response.py  schema.py  telemetry.py  tool.py  toolkit.py  utils.py
arcade/arcade/sdk/: __init__.py  auth.py  error.py  errors.py  schemas.py  tool.py
arcade/arcade/templates/: arcade.template.env
arcade/arcade/tool/: catalog.py  executor.py  openai.py  response.py
arcade/arcade/utils/: __init__.py
arcade/docs/: index.md  modules.md
arcade/tests/cli/: test_dashboard.py  test_show.py  test_utils.py
arcade/tests/client/: test_client.py
arcade/tests/core/: test_catalog.py  test_executor.py  test_output.py  test_parse.py  test_schema.py  test_telemetry.py
arcade/tests/deployment/: test_config.py
arcade/tests/mcp/: test_convert.py  test_message_processor.py  test_server.py  test_stdio.py
arcade/tests/sdk/: test_eval.py  test_eval_critic.py  test_tool_decorator.py
arcade/tests/tool/: test_create_tool_definition.py  test_create_tool_definition_errors.py  test_create_tool_definition_new.py  test_create_tool_definition_pydantic.py  test_create_tool_definition_pydantic_errors.py  test_fully_qualified_tool_name.py
arcade/tests/utils/: test_utils_casing.py
arcade/tests/worker/: test_worker_base.py  test_worker_fastapi.py
contrib/crewai/: Makefile  README.md  pyproject.toml
contrib/crewai/crewai_arcade/: __init__.py  _utilities.py  manager.py  structured.py
contrib/crewai/tests/: test_manager.py  test_structured_tool.py
contrib/langchain/: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
contrib/langchain/langchain_arcade/: __init__.py  _utilities.py  manager.py
contrib/langchain/tests/: conftest.py  test_manager.py
examples/apps/flask/: pyproject.toml
examples/example_nate/: pyproject.toml
examples/example_nate/arcade_example_nate/: main.py
examples/fastapi/: pyproject.toml
examples/fastapi/arcade_example_fastapi/: main.py
examples/flask/: pyproject.toml
examples/flask/arcade_example_flask/: app.py
examples/math/: pyproject.toml
examples/math/arcade_arithmetic/: main.py
libs/arcade-core/: README.md  pyproject.toml
libs/arcade-core/arcade_core/: __init__.py  annotations.py  auth.py  catalog.py  config.py  config_model.py  executor.py  output.py  parse.py  schema.py  toolkit.py
libs/arcade-serve/: README.md  pyproject.toml
toolkits/code_sandbox/: .pre-commit-config.yaml  Makefile  pyproject.toml
toolkits/code_sandbox/evals/: eval_e2b.py
toolkits/code_sandbox/tests/: test_e2b.py
toolkits/dropbox/: .pre-commit-config.yaml  conftest.py  pyproject.toml
toolkits/dropbox/arcade_dropbox/: constants.py  critics.py  exceptions.py  utils.py
toolkits/dropbox/evals/: eval_download_file.py  eval_list_items.py  eval_search.py
toolkits/dropbox/tests/: test_download_file.py  test_list_items.py  test_search_files.py
toolkits/github/: .pre-commit-config.yaml  Makefile  pyproject.toml
toolkits/github/evals/: eval_github_activity.py  eval_github_issues.py  eval_github_pull_requests.py  eval_github_repositories.py
toolkits/github/tests/: test_activity.py  test_issues.py  test_pull_requests.py  test_repositories.py
toolkits/google/: .pre-commit-config.yaml  .ruff.toml  Makefile  conftest.py  pyproject.toml
toolkits/google/arcade_google/: constants.py  critics.py  doc_to_markdown.py  exceptions.py  models.py  utils.py
toolkits/google/evals/: eval_calendar_free_slots.py  eval_file_picker.py  eval_google_calendar.py  eval_google_contacts.py  eval_google_docs.py  eval_google_drive.py  eval_google_gmail.py  eval_google_sheets.py
toolkits/google/tests/: test_calendar.py  test_contacts.py  test_doc_to_markdown.py  test_docs.py  test_drive.py  test_file_picker.py  test_gmail.py  test_sheets_models.py  test_sheets_utils.py
toolkits/linkedin/: .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
toolkits/linkedin/evals/: eval_linkedin.py
toolkits/linkedin/tests/: test_share.py
toolkits/math/: .pre-commit-config.yaml  .ruff.toml  Makefile  pyproject.toml
toolkits/math/evals/: eval_arithmetic_tools.py  eval_math_tools.py
toolkits/math/tests/: test_arithmetic.py  test_exponents.py  test_miscellaneous.py  test_rational.py  test_rounding.py  test_statistics.py  test_trigonometry.py
toolkits/notion/: .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
toolkits/notion/arcade_notion/: block_to_markdown_converter.py  constants.py  enums.py  utils.py
toolkits/notion/arcade_notion_toolkit/: block_to_markdown_converter.py  constants.py  markdown_to_block_converter.py  types.py  utils.py
toolkits/notion/evals/: constants.py  eval_notion_pages.py  eval_notion_search.py
toolkits/notion/tests/: test_block_to_markdown_converter.py  test_tools_pages.py  test_tools_search.py  test_utils.py
toolkits/search/: .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
toolkits/search/arcade_search/: constants.py  enums.py  exceptions.py  google_data.py  utils.py
toolkits/slack/: .pre-commit-config.yaml  LICENSE  Makefile  conftest.py  pyproject.toml
toolkits/websearch/: pyproject.toml
toolkits/x/: .pre-commit-config.yaml  LICENSE  Makefile  conftest.py  pyproject.toml
toolkits/x/tests/: test_users.py  (+1 more)
toolkits/zoom/: .pre-commit-config.yaml  Makefile  pyproject.toml
toolserve/: pyproject.toml
(+920 files in other folders)
