[tool.poetry]
name = "toolserve"
version = "0.1.0"
description = ""
authors = ["Sam Partee <Partees21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.7.0"}
fastapi = "^0.110.0"
redis = "^5.0.3"
uvicorn = "^0.28.0"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
msgspec = "^0.18.6"
msgpack = "^1.0.8"
typer = "^0.9.0"
rich = "^13.7.1"
toml = "^0.10.2"
tomlkit = "^0.12.4"
stdlib-list = "^0.10.0"


[tool.poetry.scripts]
tool = "toolserve.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
