[tool.poetry]
name = "crewai-arcade"
version = "0.1.1"
description = "An integration package connecting Arcade and CrewAI"
authors = ["Arcade <dev@arcade.dev>"]
readme = "README.md"
repository = "https://github.com/arcadeai/arcade-ai/tree/main/contrib/crewai"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = ">=0.1.0,<1.0.0"
pydantic = "^2.0.0"
arcadepy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"


[tool.mypy]
files = ["crewai_arcade"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["crewai_arcade"]

[tool.coverage.report]
skip_empty = true
