[tool.poetry]
name = "langchain-arcade"
version = "0.1.2"
description = "An integration package connecting Arcade AI and LangChain/LangGraph"
authors = ["Arcade AI <dev@arcade-ai.com>"]
readme = "README.md"
repository = "https://github.com/arcadeai/arcade-ai/tree/main/contrib/langchain"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-core = "^0.3.0"
arcadepy = "~0.1.2"
langgraph = {version = ">=0.2.32,<0.3.0", optional = true}

[tool.poetry.extras]
langgraph = ["langgraph"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-asyncio = "^0.23.7"


[tool.mypy]
files = ["langchain_arcade"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["langchain_arcade"]

[tool.coverage.report]
skip_empty = true
