[tool.poetry]
name = "arcade_example_nate"
version = "0.1.0"
description = "Nate's testing package for Arcade"
authors = ["Nate <nate@arcade-ai.com>"]


[tool.poetry.metadata]
license = "MIT"
repository = "https://github.com/nate/arcade_example_nate"
homepage = "https://arcade-ai.com"
tools = ["arcade", "example", "nate"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.arcade]
modules = ["arcade_example_nate.tools.arithmetic"]
