[tool.poetry]
name = "arcade_example_flask"
version = "0.1.0"
description = "Flask example app with Arcade"
authors = ["Nate <nate@arcade-ai.com>"]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
arcade-ai = {path = "../../arcade", develop = true}
arcade-math = {path = "../../toolkits/math", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
