[tool.poetry]
name = "arcade_arithmetic"
version = "0.1.0"
description = "Nate's testing package for Arcade"
authors = ["Nate <nate@arcade-ai.com>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
