[tool.poetry]
name = "arcade_github"
version = "0.1.0"
description = "AI tools for interacting with GitHub"
authors = ["Nate Barbettini <nate@arcade-ai.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "*"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
