[tool.poetry]
name = "arcade_math"
version = "0.1.0"
description = "Math toolkit for Arcade"
authors = ["Nate <nate@arcade-ai.com>"]


[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
