[tool.poetry]
name = "arcade_slack"
version = "0.1.0"
description = "Slack tools for LLMs"
authors = ["Nate Barbettini <nate@arcade-ai.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^0.1.0"
slack-sdk = "^3.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
