[tool.poetry]
name = "arcade_slack"
version = "0.4.1"
description = "Slack tools for LLMs"
authors = ["Arcade <dev@arcade.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "^1.0"  # required by slack - not picked by poetry due to slack requirements txt quirk :/
aiohttp = ">=3.7.3,<4"  # same as aiodns, above comment
arcade-ai = ">=0.1,<2.0"
slack-sdk = "^3.31.0"
typing-extensions = "^4.0.0"  # some typing annotations aren't available in older versions of python

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.11.1"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["arcade_slack/**/*.py"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true
